<package>
  <name>proper</name>
  <version>0.3.0</version>
  <description>This package provides proper packages.</description>
  <author email="jorge.rodriguez@aimen.es">Jorge Rodríguez-Araújo</author>
  <maintainer email="jorge.rodriguez@aimen.es">Jorge Rodríguez-Araújo</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>proper_cloud</run_depend>
  <run_depend>proper_jason</run_depend>
  <run_depend>proper_part</run_depend>
  <run_depend>proper_robviz</run_depend>
  <run_depend>proper_workcell</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
