<package>
  <name>proper</name>
  <version>0.6.0</version>
  <description>This package provides proper packages.</description>
  <author email="baltasar.lodeiro@aimen.es">Jorge Rodríguez-Araújo</author>
  <maintainer email="baltasar.lodeiro@aimen.es">Baltasar Lodeiro-Señarís</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>proper_cloud</run_depend>
  <run_depend>proper_jason</run_depend>
  <run_depend>proper_part</run_depend>
  <run_depend>proper_robviz</run_depend>
  <run_depend>proper_workcell</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
