<?xml version="1.0"?>
<package>
  <name>proper_abb</name>
  <version>0.3.0</version>
  <description>The abb control package.</description>
  <author email="baltasar.lodeiro@aimen.es">Baltasar Lodeiro-Señarís</author>
  <maintainer email="baltasar.lodeiro@aimen.es">Baltasar Lodeiro-Señarís</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
</package>
