<?xml version="1.0"?>
<package>
  <name>proper_cloud</name>
  <version>0.1.0</version>
  <description>The proper_cloud package</description>

  <maintainer email="jorge.rodriguez@aimen.es">Jorge Rodriguez-Araujo</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>tf</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>octomap</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>tf</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>octomap</run_depend>
  <run_depend>sensor_msgs</run_depend>

</package>
