<?xml version="1.0"?>
<package>
  <name>proper_jason</name>
  <version>0.3.0</version>
  <description>The proper_jason package</description>
  <author email="baltassar.lodeiro@aimen.es">Baltasar Lodeiro Señaris</author>
  <maintainer email="baltassar.lodeiro@aimen.es">Baltasar Lodeiro Señaris</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
